networkpolicy/networkpolicy__basic_kafka_setup__strimzi__exception__system__egress__ports__443__nr15__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--exception--system--egress--ports--443--nr15
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
